--- a/css/style.css
+++ b/css/style.css
@@ -311,7 +311,7 @@ body {
     height: 45rem;
     position: absolute;
     bottom: 10rem;
-    background-image: url(../../images/bg-curvy-desktop.svg);
+    background-image: url(../images/bg-curvy-desktop.svg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position-x: center;
@@ -355,7 +355,7 @@ body {
   .hero {
     padding-bottom: 0rem; }
     .hero::before {
-      background-image: url(../../images/bg-curvy-mobile.svg);
+      background-image: url(../images/bg-curvy-mobile.svg);
       height: 30rem;
       bottom: 10rem; }
     .hero::after {
@@ -495,7 +495,7 @@ a.nav__menu__item:hover {
     position: absolute;
     top: -3.5rem;
     left: clamp(45px, calc(2.8125rem + ((1vw - 9px) * 18.3333)), 144px);
-    background-image: url(../../images/bg-quotes.png);
+    background-image: url(../images/bg-quotes.png);
     background-repeat: no-repeat;
     z-index: 0; }
   .testimonials__item {
