--- a/sass/components/_testimonials.scss
+++ b/sass/components/_testimonials.scss
@@ -22,7 +22,7 @@
 
     left: clamp(45px, calc(2.8125rem + ((1vw - 9px) * 18.3333)), 144px);
 
-    background-image: url(../../images/bg-quotes.png);
+    background-image: url(../images/bg-quotes.png);
     background-repeat: no-repeat;
     z-index: 0;
   }
